# Style-Bert-VITS2

./: .gitignore  CLAUDE.md  MEMORY_FRAGMENTATION_ANALYSIS.md  README.md  app.py  bert_gen.py  colab.ipynb  config.py  convert_bert_onnx.py  convert_onnx.py  data_utils.py  debug_bert_padding.py  default_config.yml  default_style.py  library.ipynb  losses.py  preprocess_text.py  pyproject.toml  requirements-colab.txt  requirements-infer.txt  requirements-minimal.txt  requirements.txt  server_editor.py  server_fastapi.py  slice.py  speech_mos.py  test_actual_bert_padding.py  test_bert_precision.py  train_ms.py  train_ms_jp_extra.py  transcribe.py
.serena/: project.yml
gradio_tabs/: inference.py  merge.py
style_bert_vits2/: tts_model.py  voice.py
style_bert_vits2/models/: attentions.py  commons.py  hyper_parameters.py  infer.py  infer_onnx.py  memory_efficient.py  models.py  models_jp_extra.py  modules.py  monotonic_alignment.py  tensor_padding.py  transforms.py
style_bert_vits2/models/utils/: __init__.py  checkpoints.py  safetensors.py
style_bert_vits2/nlp/: __init__.py  bert_models.py  onnx_bert_models.py
style_bert_vits2/nlp/chinese/: bert_feature.py  g2p.py  normalizer.py  tone_sandhi.py
style_bert_vits2/nlp/english/: bert_feature.py  cmudict.py  cmudict.rep  g2p.py  normalizer.py  short_form_dict.rep  short_form_dict_cache.pickle
style_bert_vits2/nlp/japanese/: bert_feature.py  g2p.py  g2p_utils.py  katakana_map.py  mora_list.py  normalizer.py  romkan.py
style_bert_vits2/nlp/japanese/g2p_utils/: accent.py  dialect.py  fugashi.py  yomikata.py
style_bert_vits2/nlp/japanese/pyopenjtalk_worker/: __init__.py  worker_server.py
style_bert_vits2/nlp/japanese/pyopenjtalk_worker/fugashi_wrapper/: __init__.py  left_id_def.py  right_id_def.py  unidic_file.py
style_bert_vits2/nlp/japanese/user_dict/: __init__.py  part_of_speech_data.py  word_model.py
style_bert_vits2/utils/: __init__.py  strenum.py  subprocess.py
tests/: bert_int8_benchmark.py  bert_int8_precision_test.py  debug_memory_profiling.py  long_inference_benchmark.py  memory_buckets_benchmark.py  realistic_memory_profiling.py  streaming_benchmark.py  tensor_padding_benchmark.py  test_main.py  test_memory_efficient.py  test_normalizer.py  utils.py
